--- a/Stregsystem/Stregsystem.csproj
+++ b/Stregsystem/Stregsystem.csproj
@@ -41,8 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BuyTransaction.cs" />
+    <Compile Include="ILog.cs" />
+    <Compile Include="InsertCashTransaction.cs" />
+    <Compile Include="InsufficientCreditsException.cs" />
+    <Compile Include="Log.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeasonalProduct.cs" />
+    <Compile Include="Stregsystem.cs" />
+    <Compile Include="Transaction.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
