--- a/Stregsystem/Stregsystem.csproj
+++ b/Stregsystem/Stregsystem.csproj
@@ -45,18 +45,28 @@
     <Compile Include="ILog.cs" />
     <Compile Include="InsertCashTransaction.cs" />
     <Compile Include="InsufficientCreditsException.cs" />
+    <Compile Include="IStregsystemUI.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Product.cs" />
+    <Compile Include="ProductHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SeasonalProduct.cs" />
     <Compile Include="Stregsystem.cs" />
+    <Compile Include="StregsystemCLI.cs" />
     <Compile Include="Transaction.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="UserHandler.cs" />
     <Compile Include="UsernameTakenException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="products.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Kilder.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
